apps/workloads/games/mc-router/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc-router
  namespace: games
  labels:
    app: mc-router
    pool: dmz-lb-pool
  annotations:
    lbipam.cilium.io/ips: "10.20.1.140"
    lbipam.cilium.io/sharing-key: "minecraft-games"
    cilium.io/service-sharing-key: "minecraft-games"

spec:
  type: LoadBalancer
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  externalTrafficPolicy: Cluster

  selector:
    app: mc-router
  ports:
    - name: minecraft-tcp-external
      port: 11036
      targetPort: 25565
      protocol: TCP
